traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:43: error: not found: value condition
  if(condition) {
     ^Snake:44: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^Snake:44: warning: enclosing method pasDeSerpent has result type Unit: return value discarded
    return true
    ^Snake:46: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^Snake:46: warning: enclosing method pasDeSerpent has result type Unit: return value discarded
  return false
  ^